# R-Type-Reborn

./: CMakeLists.txt  build-windows.ps1  conanfile.txt
assets/objects/json/: Ally.json  Bullet.json  Enemy.json  NetworkManager.json  Player.json
assets/objects/scripts/: Background.cpp  Background.hpp  NetworkManager.cpp  NetworkManager.hpp
assets/scenes/json/: Scene.json
client/: CMakeLists.txt  main.cpp
client/dto/: CMakeLists.txt  DTODecoder.cpp  DTODecoder.hpp  DTOEncoder.cpp  DTOEncoder.hpp  DTOException.cpp  DTOException.hpp  DTORegistry.cpp  DTORegistry.hpp  IDTO.hpp  IDTODecoder.hpp  IDTOEncoder.hpp
client/dto/entity/: AEntityDTO.cpp  AEntityDTO.hpp  EntityCreationDTO.cpp  EntityCreationDTO.hpp  EntityDeletionDTO.cpp  EntityDeletionDTO.hpp  EntityPositionDTO.cpp  EntityPositionDTO.hpp  EntityTypeEnum.hpp
client/dto/player/: APlayerDTO.cpp  APlayerDTO.hpp  APlayerDTO.hpp~epi-34-create-prototype-of-server  PlayerActionEnum.hpp  PlayerActionStartDTO.cpp  PlayerActionStartDTO.hpp  PlayerActionStopDTO.cpp  PlayerActionStopDTO.hpp
client/utils/: BinaryVector.cpp  BinaryVector.hpp
includes/StellarForge/common/fields/: StringField.hpp
libs/: StellarForge.lib  StellarForgePhysics.lib
network/: NetworkException.hpp
network/client/: Client.cpp  Client.hpp  ISessionClient.hpp
network/server/: ISessionServer.hpp  Server.cpp  Server.hpp
server/: GameLogic.cpp  GameLogic.hpp  Server.cpp  Server.hpp  main.cpp
server/dto/player/: PlayerActionEnum.hpp
server/entities/: ABullet.cpp  AEntity.cpp  AEntity.hpp  AShip.cpp  BasicEnemy.cpp  ClassicBullet.cpp  EntityManager.cpp  EntityManager.hpp  IEntity.hpp  Player.cpp
server/utils/: BinaryVector.hpp
tools/: linux-build.sh
